--- a/themes/default/templates/projects/milestone_timeline.html
+++ b/themes/default/templates/projects/milestone_timeline.html
@@ -11,7 +11,7 @@
     {% add_crumb 'Home' '/' %}
     {% add_crumb 'Projects' 'project_list' %}
     {% add_crumb object.project object.project.get_absolute_url %}
-    {% add_crumb 'Milestones' 'milestone_list' object.project.slug %}
+    {% add_crumb 'Milestones' 'milestone_list' object.project.code %}
     {% add_crumb object object.get_absolute_url %}
     {% add_crumb 'Timeline' %}
 {% endblock %}
