--- a/themes/default/templates/projects/milestone_edit.html
+++ b/themes/default/templates/projects/milestone_edit.html
@@ -12,7 +12,7 @@
     {% add_crumb 'Home' '/' %}
     {% add_crumb 'Projects' 'project_list' %}
     {% add_crumb object.project object.project.get_absolute_url %}
-    {% add_crumb 'Milestones' 'milestone_list' object.project.slug %}
+    {% add_crumb 'Milestones' 'milestone_list' object.project.code %}
     {% if object.pk %}
     {% add_crumb object object.get_absolute_url %}
     {% add_crumb 'Edit' %}
@@ -34,13 +34,13 @@
 
 {% block main %}
 {% if object.pk %}
-<form method="post" action="{% url milestone_edit object.project.slug object.slug %}">
+<form method="post" action="{% url milestone_edit object.project.code object.code %}">
 {% else %}
-<form method="post" action="{% url milestone_add object.project.slug %}">
+<form method="post" action="{% url milestone_add object.project.code %}">
 {% endif %}
     {% csrf_token %}
     <table class="properties">
-        {% property_table form "['title', 'description', 'manager', 'deadline', 'categories', 'tags', 'allow_comments']" %}
+        {% property_table form "['title', 'code', 'description', 'manager', 'deadline', 'categories', 'tags', 'allow_comments']" %}
     </table>
     <span class="submit"><input type="submit" value="{% trans 'Save' %}"/></span>
 </form>
