--- a/themes/default/templates/projects/project_delete.html
+++ b/themes/default/templates/projects/project_delete.html
@@ -20,7 +20,7 @@
 {% endblock %}
 
 {% block main %}
-<form method="post" action="{% url project_delete object.slug %}">
+<form method="post" action="{% url project_delete object.code %}">
     {% csrf_token %}
     <p>{% trans "Are you sure you want to delete this project?" %}</p>
     <span class="submit"><input type="submit" value="{% trans "Yes, I'm sure." %}" /></span>
