--- a/themes/default/templates/projects/project_detail.html
+++ b/themes/default/templates/projects/project_detail.html
@@ -29,10 +29,10 @@
         <li class="add"><a title="{% trans 'Add' %}" href="{% url project_add %}">{% trans 'Add' %}</a></li>
         {% endif %}
         {% if perms.projects.change_project %}
-        <li class="edit"><a title="{% trans 'Edit' %}" href="{% url project_edit object.slug %}">{% trans 'Edit' %}</a></li>
+        <li class="edit"><a title="{% trans 'Edit' %}" href="{% url project_edit object.code %}">{% trans 'Edit' %}</a></li>
         {% endif %}
         {% if perms.projects.delete_project %}
-        <li class="delete"><a title="{% trans 'Delete' %}" href="{% url project_delete object.slug %}">{% trans 'Delete' %}</a></li>
+        <li class="delete"><a title="{% trans 'Delete' %}" href="{% url project_delete object.code %}">{% trans 'Delete' %}</a></li>
         {% endif %}
         {% if perms.projects.change_project %}
         <li class="all"><a title="{% trans 'All' %}" href="{% url project_list %}">{% trans 'All' %}</a></li>
