--- a/themes/default/templates/projects/ticket_detail.html
+++ b/themes/default/templates/projects/ticket_detail.html
@@ -11,7 +11,7 @@
     {% add_crumb 'Home' '/' %}
     {% add_crumb 'Projects' '/projects/' %}
     {% add_crumb object.project object.project.get_absolute_url %}
-    {% add_crumb 'Tickets' 'ticket_list' object.project.slug %}
+    {% add_crumb 'Tickets' 'ticket_list' object.project.code %}
     {% add_crumb object %}
 {% endblock %}
 
@@ -27,16 +27,16 @@
 <div class="actions">
     <ul>
         {% if perms.projects.add_ticket %}
-        <li class="add"><a title="{% trans 'Add' %}" href="{% url ticket_add object.project.slug %}">{% trans 'Add' %}</a></li>
+        <li class="add"><a title="{% trans 'Add' %}" href="{% url ticket_add object.project.code %}">{% trans 'Add' %}</a></li>
         {% endif %}
         {% if perms.projects.change_ticket %}
-        <li class="edit"><a title="{% trans 'Edit' %}" href="{% url ticket_edit object.project.slug object.pk %}">{% trans 'Edit' %}</a></li>
+        <li class="edit"><a title="{% trans 'Edit' %}" href="{% url ticket_edit object.project.code object.code %}">{% trans 'Edit' %}</a></li>
         {% endif %}
         {% if perms.projects.delete_ticket %}
-        <li class="delete"><a title="{% trans 'Delete' %}" href="{% url ticket_delete object.project.slug object.pk %}">{% trans 'Delete' %}</a></li>
+        <li class="delete"><a title="{% trans 'Delete' %}" href="{% url ticket_delete object.project.code object.code %}">{% trans 'Delete' %}</a></li>
         {% endif %}
         {% if perms.projects.change_ticket %}
-        <li class="all"><a title="{% trans 'All' %}" href="{% url ticket_list object.project.slug %}">{% trans 'All' %}</a></li>
+        <li class="all"><a title="{% trans 'All' %}" href="{% url ticket_list object.project.code %}">{% trans 'All' %}</a></li>
         {% endif %}
         {% if perms.projects.change_ticket %}
         {% if user not in object.stream.followers.all %}
