--- a/themes/default/templates/stock/deliverynote_detail.html
+++ b/themes/default/templates/stock/deliverynote_detail.html
@@ -60,7 +60,7 @@
         <div class="details">
             <table class="properties">
                 {% property_table object "[['owner', 'status'], ['author', 'created']]" %}
-                {% property_table object.content_object "[['invoice_addressee', 'delivery_addressee'], ['order_ref_number', 'order_ref_date'], ['means_of_delivery', 'terms_of_payment'], ['reason_of_shipping', 'terms_of_shipping'], ['goods_appearance', 'delivery_date'], 'notes']" %}
+                {% property_table object.content_object "[['invoice_addressee', 'delivery_addressee'], ['order_ref_number', 'order_ref_date'], 'means_of_delivery', ['reason_of_shipping', 'terms_of_shipping'], ['goods_appearance', 'delivery_date'], 'notes']" %}
                 {% property_table object "['categories', 'tags']" %}
             </table>
             {% detail_table object.content_object.entries.all "['product', 'quantity', 'unit_price', 'notes']" %}
