Improved terms of payments.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@687 71535020-02ba-11df-897e-95fb7fca2173

--- a/settings/base.py.tmpl
+++ b/settings/base.py.tmpl
@@ -503,6 +503,8 @@ TERMS_OF_PAYMENT = (
     ('60', _('60 days')),
     ('90', _('90 days')),
     ('120', _('120 days')),
+    ('CIA', _('cash in advance')),
+    ('COD', _('cash on delivery')),
 )
 
 DEFAULT_TERMS_OF_PAYMENT = '30'
