Split of the settings/base module into many app-specific modules.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@690 71535020-02ba-11df-897e-95fb7fca2173

--- a/settings/base.py.tmpl
+++ b/settings/base.py.tmpl
@@ -140,8 +140,6 @@ TEMPLATE_CONTEXT_PROCESSORS = (
     'django.core.context_processors.static',
     'django.core.context_processors.request',
     'django.contrib.messages.context_processors.messages',
-
-    'prometeo.core.auth.context_processors.auth',
 )
 
 # List of middleware classes to use.  Order is important; in the request phase,
@@ -155,8 +153,6 @@ MIDDLEWARE_CLASSES = (
     'django.middleware.locale.LocaleMiddleware',
     'django.contrib.messages.middleware.MessageMiddleware',
     'django.contrib.redirects.middleware.RedirectFallbackMiddleware',
-
-    'prometeo.core.auth.middleware.RequireLoginMiddleware',
 )
 
 # Root for URL dispatcher.
@@ -225,479 +221,13 @@ INSTALLED_APPS = (
     #'prometeo.projects',
 )
 
-# Authentication management options.
-AUTH_PROFILE_MODULE = 'auth.UserProfile'
-AUTH_EXPIRATION_DAYS = 2
-
-LOGIN_URL = '/users/login'
-LOGOUT_URL = '/users/logout'
-LOGIN_REDIRECT_URL = '/users/logged/'
-
-LOGIN_REQUIRED_URLS = (
-    r'/(.*)$',
-)
-
-LOGIN_REQUIRED_URLS_EXCEPTIONS = (
-    r'/static/(.*)$',
-    r'/users/login/$',
-    r'/users/register/$',
-    r'/users/activate/(.*)$',
-)
-
-if DEBUG:
-    EMAIL_BACKEND = 'django.core.mail.backends.console.EmailBackend'
-
-AUTHENTICATION_BACKENDS = (
-    'django.contrib.auth.backends.ModelBackend',
-    'prometeo.core.auth.backends.ObjectPermissionBackend',
-)
-
-# Taxonomy management options.
-SEARCH_IN_MODELS = (
-    'auth.User',
-    'taxonomy.Category',
-    'taxonomy.Tag',
-    #'events.Event',
-    #'todo.Task',
-    #'addressing.Address',
-    #'addressing.PhoneNumber',
-    #'partners.Contact',
-    #'partners.Partner',
-    #'documents.Document',
-    #'products.Product',
-    #'products.Supply',
-    #'stock.Warehouse',
-    #'stock.Movement',
-    #'accounting.BankAccount',
-    #'projects.Project',
-    #'projects.Area',
-    #'projects.Milestone',
-    #'projects.Ticket',
-)
-
-# Events management options.
-"""
-EVENT_STATUS_CHOICES = (
-    ('TENTATIVE', _('tentative')),
-    ('CONFIRMED', _('confirmed')),
-    ('CANCELLED', _('cancelled')),
-)
-
-EVENT_DEFAULT_STATUS = 'CONFIRMED'
-"""
-
-# ToDo managements options.
-"""
-TIMESHEET_STATUS_CHOICES = (
-    ('DRAFT', _('draft')),
-    ('CONFIRMED', _('confirmed'))
-)
-
-TIMESHEET_DEFAULT_STATUS = 'DRAFT'
-
-WORKING_DAY_START = datetime.time(9, 0)
-WORKING_DAY_END = datetime.time(18, 30)
-
-LAUNCH_TIME_START = datetime.time(13, 0)
-LAUNCH_TIME_END = datetime.time(14, 30)
-"""
-
-# Addressing management options.
-"""
-ADDRESS_TYPES = (
-    ('0', _('preferred')),
-    ('1', _('invoice')),
-    ('2', _('delivery')),
-    ('3', _('other'))
-)
-
-DEFAULT_ADDRESS_TYPE = '0'
-
-PHONE_TYPES = (
-    ('0', _('land Line')),
-    ('1', _('mobile')),
-    ('2', _('fax'))
-)
-
-DEFAULT_PHONE_TYPE = '0'
-"""
-
-# Partners management options.
-"""
-LEAD_STATUS_CHOICES = (
-    ('FIRST', _('first contact')),
-)
-
-LEAD_DEFAULT_STATUS = 'FIRST'
-
-CURRENCIES = (
-    ('AED', _('AED')),
-    ('AFN', _('AFN')),
-    ('ALL', _('ALL')),
-    ('AMD', _('AMD')),
-    ('ANG', _('ANG')),
-    ('AOA', _('AOA')),
-    ('ARS', _('ARS')),
-    ('AUD', _('AUD')),
-    ('AZN', _('AZN')),
-    ('BAM', _('BAM')),
-    ('BBD', _('BBD')),
-    ('BDT', _('BDT')),
-    ('BGN', _('BGN')),
-    ('BHD', _('BHD')),
-    ('BIF', _('BIF')),
-    ('BMD', _('BMD')),
-    ('BND', _('BND')),
-    ('BOB', _('BOB')),
-    ('BRL', _('BRL')),
-    ('BSD', _('BSD')),
-    ('BTN', _('BTN')),
-    ('BWP', _('BWP')),
-    ('BYR', _('BYR')),
-    ('BZD', _('BZD')),
-    ('CAD', _('CAD')),
-    ('CDF', _('CDF')),
-    ('CFA', _('CFA')),
-    ('CFP', _('CFP')),
-    ('CHF', _('CHF')),
-    ('CLP', _('CLP')),
-    ('CNY', _('CNY')),
-    ('COP', _('COP')),
-    ('CRC', _('CRC')),
-    ('CUC', _('CUC')),
-    ('CZK', _('CZK')),
-    ('DJF', _('DJF')),
-    ('DKK', _('DKK')),
-    ('DOP', _('DOP')),
-    ('DZD', _('DZD')),
-    ('EEK', _('EEK')),
-    ('EGP', _('EGP')),
-    ('ERN', _('ERN')),
-    ('ETB', _('ETB')),
-    ('EUR', _('EUR')),
-    ('FJD', _('FJD')),
-    ('FKP', _('FKP')),
-    ('FMG', _('FMG')),
-    ('GBP', _('GBP')),
-    ('GEL', _('GEL')),
-    ('GHS', _('GHS')),
-    ('GIP', _('GIP')),
-    ('GMD', _('GMD')),
-    ('GNF', _('GNF')),
-    ('GQE', _('GQE')),
-    ('GTQ', _('GTQ')),
-    ('GYD', _('GYD')),
-    ('HKD', _('HKD')),
-    ('HNL', _('HNL')),
-    ('HRK', _('HRK')),
-    ('HTG', _('HTG')),
-    ('HUF', _('HUF')),
-    ('IDR', _('IDR')),
-    ('ILS', _('ILS')),
-    ('INR', _('INR')),
-    ('IQD', _('IQD')),
-    ('IRR', _('IRR')),
-    ('ISK', _('ISK')),
-    ('JMD', _('JMD')),
-    ('JOD', _('JOD')),
-    ('JPY', _('JPY')),
-    ('KES', _('KES')),
-    ('KGS', _('KGS')),
-    ('KHR', _('KHR')),
-    ('KMF', _('KMF')),
-    ('KPW', _('KPW')),
-    ('KRW', _('KRW')),
-    ('KWD', _('KWD')),
-    ('KYD', _('KYD')),
-    ('KZT', _('KZT')),
-    ('LAK', _('LAK')),
-    ('LBP', _('LBP')),
-    ('LKR', _('LKR')),
-    ('LRD', _('LRD')),
-    ('LSL', _('LSL')),
-    ('LTL', _('LTL')),
-    ('LVL', _('LVL')),
-    ('LYD', _('LYD')),
-    ('MAD', _('MAD')),
-    ('MDL', _('MDL')),
-    ('MGA', _('MGA')),
-    ('MKD', _('MKD')),
-    ('MMK', _('MMK')),
-    ('MNT', _('MNT')),
-    ('MOP', _('MOP')),
-    ('MRO', _('MRO')),
-    ('MUR', _('MUR')),
-    ('MVR', _('MVR')),
-    ('MWK', _('MWK')),
-    ('MXN', _('MXN')),
-    ('MYR', _('MYR')),
-    ('MZM', _('MZM')),
-    ('NAD', _('NAD')),
-    ('NGN', _('NGN')),
-    ('NIO', _('NIO')),
-    ('NOK', _('NOK')),
-    ('NPR', _('NPR')),
-    ('NRs', _('NRs')),
-    ('NZD', _('NZD')),
-    ('OMR', _('OMR')),
-    ('PAB', _('PAB')),
-    ('PEN', _('PEN')),
-    ('PGK', _('PGK')),
-    ('PHP', _('PHP')),
-    ('PKR', _('PKR')),
-    ('PLN', _('PLN')),
-    ('PYG', _('PYG')),
-    ('QAR', _('QAR')),
-    ('RMB', _('RMB')),
-    ('RON', _('RON')),
-    ('RSD', _('RSD')),
-    ('RUB', _('RUB')),
-    ('RWF', _('RWF')),
-    ('SAR', _('SAR')),
-    ('SCR', _('SCR')),
-    ('SDG', _('SDG')),
-    ('SDR', _('SDR')),
-    ('SEK', _('SEK')),
-    ('SGD', _('SGD')),
-    ('SHP', _('SHP')),
-    ('SOS', _('SOS')),
-    ('SRD', _('SRD')),
-    ('STD', _('STD')),
-    ('SYP', _('SYP')),
-    ('SZL', _('SZL')),
-    ('THB', _('THB')),
-    ('TJS', _('TJS')),
-    ('TMT', _('TMT')),
-    ('TND', _('TND')),
-    ('TRY', _('TRY')),
-    ('TTD', _('TTD')),
-    ('TWD', _('TWD')),
-    ('TZS', _('TZS')),
-    ('UAE', _('UAE')),
-    ('UAH', _('UAH')),
-    ('UGX', _('UGX')),
-    ('USD', _('USD')),
-    ('UYU', _('UYU')),
-    ('UZS', _('UZS')),
-    ('VEB', _('VEB')),
-    ('VND', _('VND')),
-    ('VUV', _('VUV')),
-    ('WST', _('WST')),
-    ('XAF', _('XAF')),
-    ('XCD', _('XCD')),
-    ('XDR', _('XDR')),
-    ('XOF', _('XOF')),
-    ('XPF', _('XPF')),
-    ('YEN', _('YEN')),
-    ('YER', _('YER')),
-    ('YTL', _('YTL')),
-    ('ZAR', _('ZAR')),
-    ('ZMK', _('ZMK')),
-    ('ZWR', _('ZWR')),
-)
-
-DEFAULT_CURRENCY = 'EUR'
-
-TERMS_OF_PAYMENT = (
-    ('30', _('30 days')),
-    ('60', _('60 days')),
-    ('90', _('90 days')),
-    ('120', _('120 days')),
-    ('CIA', _('cash in advance')),
-    ('COD', _('cash on delivery')),
-)
-
-DEFAULT_TERMS_OF_PAYMENT = '30'
-
-ROLES = (
-    ('CHAIRMAN', _("Chairman")),
-    ('CEO', _("CEO")),
-    ('COO', _("COO")),
-    ('CFO', _("CFO")),
-    ('CTO', _("CTO")),
-    ('PROJMANAGER', _("Project Manager")),
-    ('SALESMANAGER', _("Sales Manager")),
-    ('SALESMAN', _("Salesman")),
-    ('EMPLOYEE', _("Employee")),
-)
-
-DEFAULT_ROLE = 'EMPLOYEE'
-"""
-
-# Documents management options.
-"""
-DOCUMENT_STATUS_CHOICES = (
-    ('DRAFT', _('draft')),
-    ('CONFIRMED', _('confirmed')),
-    ('REVIEWED', _('reviewed')),
-)
-
-DOCUMENT_DEFAULT_STATUS = 'DRAFT'
-"""
-
-# Products management options.
-"""
-PRODUCT_UOM_CHOICES = (
-    ('BG', _('Bag')),
-    ('BR', _('Barrel')),
-    ('BL', _('Block')),
-    ('B8', _('Board')),
-    ('BF', _('Board Feet')),
-    ('BO', _('Bottle')),
-    ('BX', _('Box')),
-    ('BN', _('Bulk')),
-    ('BD', _('Bundle')),
-    ('CG', _('Card')),
-    ('CT', _('Carton')),
-    ('CQ', _('Cartridge')),
-    ('CA', _('Case')),
-    ('C3', _('Centigram')),
-    ('CM', _('Centiliter')),
-    ('1N', _('Count')),
-    ('CC', _('Cubic Centimeter')),
-    ('C8', _('Cubic Decimeter')),
-    ('CF', _('Cubic Feet')),
-    ('CI', _('Cubic Inches')),
-    ('CR', _('Cubic Meter')),
-    ('MMQ', _('Cubic Milimetre')),
-    ('DA', _('Days')),
-    ('DG', _('Decigram')),
-    ('DL', _('Deciliter')),
-    ('DM', _('Decimeter')),
-    ('CE', _('Degrees Celsius')),
-    ('FA', _('Degrees Fahrenheit')),
-    ('DZ', _('Dozen')),
-    ('FT', _('Feet')),
-    ('UZ', _('Fifty Count')),
-    ('UY', _('Fifty Square Feet')),
-    ('FO', _('Fluid Ounce')),
-    ('GA', _('Gallon')),
-    ('GR', _('Gram')),
-    ('GT', _('Gross Kilogram')),
-    ('HD', _('Half Dozen')),
-    ('HC', _('Houndred Count')),
-    ('HL', _('Houndred Feet')),
-    ('CW', _('Houndred Pounds')),
-    ('IN', _('Inches')),
-    ('JR', _('Jar')),
-    ('KG', _('Kilogram')),
-    ('DK', _('Kilometer')),
-    ('KT', _('Kit')),
-    ('LT', _('Liter')),
-    ('MR', _('Meter')),
-    ('MP', _('Metric Ton')),
-    ('MC', _('Microgram')),
-    ('4G', _('Microliter')),
-    ('ME', _('Miligram')),
-    ('ML', _('Mililiter')),
-    ('MM', _('Milimeter')),
-    ('OZ', _('Ounces')),
-    ('PH', _('Pack')),
-    ('PK', _('Package')),
-    ('PA', _('Pail')),
-    ('PR', _('Pair')),
-    ('PL', _('Pallet')),
-    ('P1', _('Percent')),
-    ('PC', _('Piece')),
-    ('PT', _('Pint')),
-    ('PTN', _('Portion')),
-    ('V2', _('Pouch')),
-    ('ST', _('Set')),
-    ('SH', _('Sheet')),
-    ('SF', _('Square Foot')),
-    ('SM', _('Square Meter')),
-    ('SY', _('Square Yard')),
-    ('TK', _('Tank')),
-    ('TM', _('Thousand Feet')),
-    ('UN', _('Unit')),
-    ('YD', _('Yard')),
-)
-
-PRODUCT_DEFAULT_UOM = 'UN'
-
-PRODUCT_SUPPLY_METHODS = (
-    ('PUR', _('Purchase')),
-    ('PROD', _('Production'))
-)
-
-PRODUCT_DEFAULT_SUPPLY_METHOD = 'PUR'
-
-PRODUCT_DEFAULT_WARRANTY_PERIOD = 730
-"""
-
-# Stock management options.
-"""
-MEANS_OF_DELIVERY = (
-    ('SENDER', _('sender')),
-    ('ADDRESSEE', _('addressee')),
-    ('CARRIER', _('carrier')),
-)
-
-DEFAULT_MEAN_OF_DELIVERY = 'CARRIER'
-
-TERMS_OF_SHIPPING = (
-    ('EXW', _('EXW')),
-    ('FCA', _('FCA')),
-    ('CPT', _('CPT')),
-    ('CIP', _('CIP')),
-    ('DAT', _('DAT')),
-    ('DAP', _('DAP')),
-    ('DDP', _('DDP')),
-    ('FAS', _('FAS')),
-    ('FOB', _('FOB')),
-    ('CFR', _('CFR')),
-    ('CIF', _('CIF')),
-)
-
-DEFAULT_TERMS_OF_SHIPPING = 'CPT'
-
-GOODS_APPEARANCES = (
-    ('BOX', _('box')),
-)
-
-DEFAULT_GOODS_APPEARANCE = 'BOX'
-"""
-
-# Project management options.
-"""
-PROJECT_STATUS_CHOICES = (
-    ('OPEN', _('open')),
-    ('CLOSED', _('closed')),
-)
-
-PROJECT_DEFAULT_STATUS = 'OPEN'
-
-PROJECT_CLOSE_STATUSES = ('CLOSED',)
-
-TICKET_URGENCY_CHOICES = (
-    ('VERY-LOW', _('very low')),
-    ('LOW', _('low')),
-    ('MEDIUM', _('medium')),
-    ('HIGH', _('high')),
-    ('CRITICAL', _('critical')),
-)
-
-TICKET_DEFAULT_URGENCY = 'MEDIUM'
-
-TICKET_TYPE_CHOICES = (
-    ('BUG', _('bug')),
-    ('TASK', _('task')),
-    ('IDEA', _('idea')),
-)
-
-TICKET_DEFAULT_TYPE = 'BUG'
-
-TICKET_STATUS_CHOICES = (
-    ('NEW', _('new')),
-    ('TESTS', _('needs tests')),
-    ('ACCEPTED', _('accepted')),
-    ('INVALID', _("invalid")),
-    ('DUPLICATE', _('duplicated')),
-    ('RESOLVED', _('resolved')),
-    ('REVIEW', _('awaiting review')),
-)
-
-TICKET_DEFAULT_STATUS = 'NEW'
-
-TICKET_CLOSE_STATUSES = ('INVALID', 'DUPLICATE', 'RESOLVED')
-"""
+# Auto-discovering of application specific settings.
+for app in INSTALLED_APPS:
+    try:
+        prefix, sep, app_name = app.rpartition('.')
+        settings = __import__(app_name, globals(), locals(), ['*'], -1)
+        for attr in dir(settings):
+            if not attr.startswith('_'):
+                globals()[attr] = getattr(settings, attr)
+    except:
+        pass
