--- a/themes/default/templates/auth/user_detail.html
+++ b/themes/default/templates/auth/user_detail.html
@@ -28,10 +28,10 @@
         {% if perms.auth.add_user %}
         <li class="add"><a title="{% trans 'Add' %}" href="{% url user_add %}">{% trans 'Add' %}</a></li>
         {% endif %}
-        {% if request.user == object or perms.auth.change_user %}
+        {% if request.user.id in obj_perms.auth.change_user %}
         <li class="edit"><a title="{% trans 'Edit' %}" href="{% url user_edit object.username %}">{% trans 'Edit' %}</a></li>
         {% endif %}
-        {% if request.user == object or perms.auth.delete_user %}
+        {% if request.user.id in obj_perms.auth.delete_user %}
         <li class="delete"><a title="{% trans 'Delete' %}" href="{% url user_delete object.username %}">{% trans 'Delete' %}</a></li>
         {% endif %}
         {% if perms.auth.change_user %}
