Added proof of concept of "knowledge" app.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@695 71535020-02ba-11df-897e-95fb7fca2173

--- a/settings/base.py.tmpl
+++ b/settings/base.py.tmpl
@@ -219,6 +219,7 @@ INSTALLED_APPS = (
     #'prometeo.stock',
     #'prometeo.accounting',
     #'prometeo.projects',
+    #'prometeo.knowledge',
 )
 
 # Auto-discovering of application specific settings.
