Improved the "knowledge" app.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@696 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -1024,15 +1024,23 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
     margin-left: 0;
 }
 
-#content .choices { border-top: 1px solid #c0c0c0; }
+#content .choices { margin: 0; }
 
 #content .choices li {
-    border-bottom: 1px solid #c0c0c0;
+    border-top: 1px solid #c0c0c0;
     padding: 10px 15px 10px 30px;
     background-position: 13px 13px;
 }
 
 #content .choices .counter  { float: right; }
+
+#content .vote-counter {
+    float: right;
+    width: 100%;
+    text-align: right;
+    border-top: 2px solid #c0c0c0;
+    color: #60625d;
+}
 
 #sidebar {
     float: left;
