Improved contact management.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@701 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/partners/contact_detail.html
+++ b/themes/default/templates/partners/contact_detail.html
@@ -52,7 +52,7 @@
         <div class="details">
             {% avatar object 90 %}
             <table class="properties">
-                {% property_table object "['full_name', ['email', 'url'], ['main_address', 'main_phone_number'], 'tags', 'categories']" %}
+                {% property_table object "[['full_name', 'nickname'], ['language', 'timezone'], ['ssn', 'user'], ['email', 'url'], ['main_address', 'main_phone_number'], 'tags', 'categories']" %}
             </table>
         </div>
         {% endblock %}
