--- a/themes/default/templates/menus/menu.html
+++ b/themes/default/templates/menus/menu.html
@@ -4,9 +4,9 @@
 <ul class="menu">
 {% for link in links %}
     {% if link.authorized %}
-    <li class="menu-link" id="{{ link.slug|escape }}-link">
+    <li{% matchlink link request.get_full_path %} id="{{ link.slug|escape }}-link">
         {% with link.description|default:link.title|striptags as link_title %}
-        <a{% matchlink link request.get_full_path %} href="{{ link.url|escape }}" title="{% trans link_title %}">
+        <a href="{{ link.url|escape }}" title="{% trans link_title %}">
             {% trans link.title|escape %}
         </a>
         {% endwith %}
