Fixed listing of documents of the same type.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@712 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/accounting/salesinvoice_detail.html
+++ b/themes/default/templates/accounting/salesinvoice_detail.html
@@ -47,7 +47,7 @@
         {% endif %}
     </ul>
 </div>
-{% objects_from object %}
+{% objects_from object "get_for_content" object.content_object %}
 {% with objects as object_list %}
 {% include 'elements/navigator.html' %}
 {% endwith %}
